add target _blank

--- a/mzk/web-design.html
+++ b/mzk/web-design.html
@@ -86,7 +86,7 @@
           <dd>Photoshop・XD</dd>
 
           <dt>URL</dt>
-          <dd><a href="https://mzk88.github.io/mzk88/Naoki/index.html" class="url">mzk88.github.io</a></dd>
+          <dd><a href="https://mzk88.github.io/mzk88/Naoki/index.html" class="url" target="_blank">mzk88.github.io</a></dd>
       </dl>
    </div>
 
