add "" to line71 (なぜ）

--- a/mzk/business.html
+++ b/mzk/business.html
@@ -68,7 +68,7 @@
       <div class="sub-title">-AIを用いて社会課題をあなたが関心のある社会課題を解決してください-</div>
       <div id="award">全263チーム中3位</div>
       <div class="img"><img src="images/google.jpg" alt="" class="shadow" width="400px" id="business-img"></div>
-      <p class="fadein">マイナビのビジコンに参加、Googleからの”AIで社会課題を解決せよ”というテーマに取り組みました。いいアイディアが出ず苦しい時期もありましたが、徹底的になぜを繰り返しました。その結果、観光公害と地域格差をAIを用いて同時に解消する企画書を仕上げ、263チーム中３位入賞することができました。</p>
+      <p class="fadein">マイナビのビジコンに参加、Googleからの”AIで社会課題を解決せよ”というテーマに取り組みました。いいアイディアが出ず苦しい時期もありましたが、徹底的に"なぜ"を繰り返しました。その結果、観光公害と地域格差をAIを用いて同時に解消する企画書を仕上げ、263チーム中３位入賞することができました。</p>
       <dl class="fadein">
           <dt>担当範囲</dt>
           <dd>企画・企画書のデザイン</dd>
