--- a/mzk/business.html
+++ b/mzk/business.html
@@ -93,7 +93,7 @@
       <h3 class="theme fadein" id="zozo-theme">キャリアインカレ2019</h3>
       <div class="sub-title fadein">-10年後に未来に存在するAIや新テクノロジーを使って世界中で大ヒットしているファッションECサービスを企画せよ by ZOZOテクノロジーズ-</div>
       <div class="img fadein"><img src="images/zozo.jpg" alt=""  class="shadow" width="400px" id="business-img"></div>
-      <p class="fadein">マイナビ主催のキャリアインカレに参加、ZOZOテクノロジーズのテーマに取り組みました。テーマが壮大でアイディアをまとめるのがとても大変でしたが、グラフやイラストを使用し、飽きない企画書を作成することを意識しました。詳細は下記のPDFをダウンロードしてご覧ください。</p>
+      <p class="fadein">マイナビ主催のキャリアインカレに参加、ZOZOテクノロジーズのテーマに取り組みました。テーマが壮大でアイディアをまとめるのがとても大変でしたが、グラフやイラストを使用し、飽きない企画書にすることを意識しました。詳細は下記のPDFをダウンロードしてご覧ください。</p>
       <dl class="fadein">
           <dt>担当範囲</dt>
           <dd>企画・企画書のデザイン</dd>
